--- a/index.html
+++ b/index.html
@@ -11,14 +11,67 @@
     <section>
         <div class="clock">
             <div class="container">
-                <h2 id="hour">00</h2>
-                <div class="dot">:</div>
-                <h2 id="minute">00</h2>
-                <div class="dot">:</div>
-                <h2 id="seconds">00</h2>
-                <span id="ampm">AM</span>
+                <div class="date">
+                    <h3 id="month">month</h3>
+                    <h3 id="day">day</h3>
+                    <h3 id="year">year</h3>
+                </div>
+                <div class="time">
+                    <h2 id="hour">00</h2>
+                    <h2 class="dot">:</h2>
+                    <h2 id="minute">00</h2>
+                    <h2 class="dot">:</h2>
+                    <h2 id="seconds">00</h2>
+                    <span id="ampm">AM</span>
+                </div>
             </div>
         </div>
     </section>
+
+    <script>
+
+        function clock(){
+            let day = document.getElementById('day');
+            let month = document.getElementById('month');
+            let months = ["January", "February", "March", "April", "May", "June",
+  "July", "August", "September", "October", "November", "December"
+];
+            let year = document.getElementById('year');
+            let hour = document.getElementById('hour');
+            let minute = document.getElementById('minute');
+            let seconds = document.getElementById('seconds');
+            let ampm = document.getElementById('ampm');
+
+            let d = new Date().getDay();
+            let mo = months[new Date().getMonth()];
+            let y = new Date().getFullYear();
+            let h = new Date().getHours();
+            let m = new Date().getMinutes();
+            let s = new Date().getSeconds();
+            let am = "AM";
+
+            /// convert 24 hrs time to 12 hrs format
+            if (h > 12) {
+                h = h - 12;
+                let am = "PM";
+            }
+            /// add 0 if number is less then 10
+            h = (h < 10) ? '0'+ h : h;
+            m = (m < 10) ? '0'+ m : m;
+            s = (s < 10) ? '0'+ s : s;
+            d = (d < 10) ? '0'+ d : d;
+
+            day.innerHTML = `${d},`;
+            month.innerHTML = mo;
+            year.innerHTML = y;
+            hour.innerHTML = h;
+            minute.innerHTML = m;
+            seconds.innerHTML = s;
+            ampm.innerHTML = am; 
+        }
+        
+        const interval = setInterval(clock, 1000);
+
+    </script>
 </body>
 </html>
