--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
         
         const interval = setInterval(clock, 1000);
 
+
+/* --------in REACT ----------- 
+        export const Clock = () => {
+   const [date, setDate] = useState(new Date());
+ 
+   useEffect(() => {
+       setInterval(()=> {
+           setDate(new Date())
+       },1000)
+   })
+return (
+   <>
+   <p>{date.toLocaleDateString()}</p>
+   <p>{date.toLocaleTimeString()}</p>
+   </>)}
+--------------------------------------------- */
     </script>
 </body>
 </html>
